# EUSTACE

./: README.md
break_detection/: Break_daily.R  README.md  RHtestsV5.r  gahmm.r  myBW.r  myeval.f  myeval.r  myevalh.r  myrbga.r  myvit.r  penlik.r  read_daily.f
break_detection/R_packages/HiddenMarkov/: MD5  NAMESPACE
break_detection/R_packages/HiddenMarkov/inst/: CITATION
break_detection/R_packages/HiddenMarkov/man/: Changes.Rd  HiddenMarkov.Rd
break_detection/R_packages/genalg/: ChangeLog  DESCRIPTION  MD5
break_detection/R_packages/geosphere/: DESCRIPTION
break_detection/R_packages/maps/: MD5
break_detection/R_packages/permute/: MD5
break_detection/R_packages/segclust/: MD5  NAMESPACE  configure.ac
break_detection/R_packages/segclust/R/: DPEM.R  clustersegments.R  segclust.R  segclustout.R  segclustselect.R  segout.R  segselect.R
break_detection/R_packages/segclust/man/: DPEM.Rd  clustersegments.Rd  hybrid.Rd  segclustout.Rd  segclustselect.Rd  segmean.Rd  segmixt.Rd  segout.Rd  segselect.Rd
break_detection/R_packages/segclust/src/: EM_algo.cc  EM_algo.h  EM_init.cc  EM_init.h  Estep.cc  Estep.h  Makevars  Mstep.cc  Mstep.h  Rwrappers.cc  Rwrappers.h  Segmentation_mean.cc  Segmentation_mean.h  Segmentation_mixt.cc  Segmentation_mixt.h  conv_hull.cc  conv_hull.h  helperfuncs.cc  helperfuncs.h  hybrid.cc  hybrid.h  logdens.cc  logdens.h  neighbors.cc  neighbors.h  repmat.cc  repmat.h  segclust_types.h
break_detection/R_packages/sp/: DESCRIPTION
quantile_matching/: AA_functions_hom.R  AA_quant_match_MO.R  README.md  format_input.R  run.R
(+36 files in other folders)
